feat: heart zones + a play with strava API

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "jigx.isJigxUser": true
+    "jigx.isJigxUser": true,
+    "jigx.attachedDevice": "iPhone",
+    "jigx.attachedDeviceToken": {
+        "deviceName": "iPhone",
+        "deviceAddress": "device/F0F81889-AF48-4F04-9A1E-80588162EEEC",
+        "sessionKey": "d562b075-d02e-4897-b2fa-4af029827aa6"
+    }
 }
